Fixed alignement issues in regards to alignment of the ul tag and header tag inside the sidebar in css file. Removed the li tag contains the h3 dashbaord and img tag and moved outside the ul tag.

--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@ body{
 }
 
 h3{
-    /* font-size: 2rem; */
-    font-size: 1.8rem;
-    font-weight: 900;
+    font-size: 2rem;
+    font-weight: 700;
 }
 
 h4{
@@ -36,38 +35,56 @@ ul, h3, h4 {
     margin: 0;
 }
 
-.acc-settings> h4 {
-    font-size: 2rem;
-}
-
 /* SiderBar Starts */
 .sidebar{
+    grid-area: sidebar;
     margin: 0;
     padding: 1rem;
-    background-color: azure;
-    grid-area: sidebar;
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    align-items: center;
     background-color: #34d399;
     color: white;
-}
-
-
-.sidebar-nav > li, .acc-settings > li {
     display: grid;
-    grid-template-columns: min-content 1fr;
-    align-items: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding: 1rem;
-    list-style: none;
+    grid-template-rows: repeat(3, max-content);
 }
 
-.sidebar-header > img {
+.title > img {
     width: 4rem;
     height: 4rem;
 }
+
+.title {
+    align-items: center;
+}
+
+.sidebar-nav, .acc-settings, .title {
+    padding: 1rem;
+    list-style: none;
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    gap: 1rem;
+}
+
+.sidebar-nav, .acc-settings {
+    padding: 1rem;
+}
+
+.sidebar-nav {
+    grid-column: auto;
+    grid-template-rows: repeat(6, 1fr);
+}
+
+.acc-settings {
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.sidebar-nav > li, .acc-settings > li{
+    grid-column: 1 / 3;
+    padding: 0.5rem;
+    /* align the h3 and img  */
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    align-items: center;
+}
+
 
 img{
     fill: white;
